src/objects/inscor__RMA__c.object
<CustomObject>
    <fields>
        <fullName>inscor__AWB_Number__c</fullName>
        <label>AWB Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Acct__c</fullName>
        <inlineHelpText>If this field is left blank when changing Ship Method then the default Acct # will be filled in automatically.</inlineHelpText>
        <label>Acct#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Bill_Freight_Via__c</fullName>
        <label>Bill Freight Via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Cust Acct</fullName>
                </value>
                <value>
                    <fullName>On Our Acct</fullName>
                </value>
                <value>
                    <fullName>On 3rd Party Acct</fullName>
                </value>
                <value>
                    <fullName>On Cust Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Business_Category_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Category Auto Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>inscor__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Return per Instructions</fullName>
                </value>
                <value>
                    <fullName>Scrap onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Final_Return_Reason__c</fullName>
        <label>Final Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Initial_Return_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Finalized_Resolution__c</fullName>
        <label>Finalized Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty Denied</fullName>
                </value>
                <value>
                    <fullName>Warranty Approved</fullName>
                </value>
                <value>
                    <fullName>Credited</fullName>
                </value>
                <value>
                    <fullName>Credit Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Freight_Amount__c</fullName>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Initial_Return_Reason__c</fullName>
        <inlineHelpText>Select reason for return given by customer</inlineHelpText>
        <label>Initial Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Initial_Return_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Instructions__c</fullName>
        <label>Internal Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Paperwork_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperwork Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Credited__c</fullName>
        <label>Quantity Credited</label>
        <summarizedField>inscor__RMA_Line__c.inscor__Quantity_Credited__c</summarizedField>
        <summaryForeignKey>inscor__RMA_Line__c.inscor__RMA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__RMA_Total_Amount__c</fullName>
        <label>RMA Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Location</label>
        <referenceTo>inscor__Company_Location__c</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Street_1__c</fullName>
        <label>Shipping Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Street_2__c</fullName>
        <label>Shipping Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Zip_Code__c</fullName>
        <label>Shipping Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Warranty Repair</fullName>
                </value>
                <value>
                    <fullName>Warranty Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RMA</label>
    <listViews>
        <fullName>inscor__All_RMAs</fullName>
        <columns>NAME</columns>
        <columns>inscor__Create_Date__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Account__c</columns>
        <columns>inscor__Contact__c</columns>
        <columns>inscor__Sales_Order__c</columns>
        <columns>inscor__RMA_Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All RMAs</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{0}</displayFormat>
        <label>RMA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Business_Category_blank_Auto_Update</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Business_Category_Auto_Update__c == true &amp;&amp; NOT(ISBLANK(TEXT(inscor__Business_Category__c)))</errorConditionFormula>
        <errorMessage>Auto Update Cannot be true when Business Category Selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Quantity_Credited_check</fullName>
        <active>true</active>
        <errorConditionFormula>and(inscor__Quantity_Credited__c &gt; 0, ISPICKVAL( inscor__Status__c , &apos;Cancelled&apos;))</errorConditionFormula>
        <errorMessage>RMA can not be cancelled after create credit memo.</errorMessage>
    </validationRules>
</CustomObject>